--- a/index.html
+++ b/index.html
@@ -8,5 +8,22 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img
+    src="https://upload.wikimedia.org/wikipedia/en/e/eb/Manchester_City_FC_badge.svg"
+    alt="Manchester City FC Logo"
+    title="Manchester City - The Sky Blues!"
+  />
+  
+  <img
+    src="https://upload.wikimedia.org/wikipedia/commons/6/66/Manchester_City_FC_Etihad_Stadium.jpg"
+    alt="Etihad Stadium"
+  />
+  
+  <img
+    src="https://upload.wikimedia.org/wikipedia/commons/d/d3/Pep_Guardiola_2017.jpg"
+    alt="Pep Guardiola"
+    title="Manchester City Manager"
+  />
+  
   </body>
 </html>
